Restructure to npm workspaces monorepo
- Move core library to packages/core as @ahsankhanamu/json-transformer
- Move playground to packages/playground as json-transformer-playground
- Add documentation site at packages/docs using Astro Starlight
- Add root workspace configuration with shared tsconfig.base.json
- Update all imports and references to new package names
- Add comprehensive API and language reference documentation

Package structure:
- @ahsankhanamu/json-transformer: Core library (publishable)
- json-transformer-playground: Interactive web playground (private)
- json-transformer-docs: Documentation site (private)

Commands:
- npm run build: Build core library
- npm run dev: Start playground
- npm run dev:docs: Start docs site
- npm test: Run tests

--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
 # Dependencies
 node_modules/
 
-# Build output
-dist/
-*.js
-*.d.ts
-*.js.map
-
-# Keep source files
-!src/**/*.ts
-!test/**/*.ts
-!jest.config.js
+# Build outputs
+packages/*/dist/
+packages/*/.svelte-kit/
+packages/docs/.astro/
 
 # IDE
 .idea/
@@ -32,3 +26,9 @@ coverage/
 # Environment
 .env
 .env.local
+
+# Lock files (keep root only)
+packages/*/package-lock.json
+
+# Local docs
+docs-local/
