--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite dev",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "node src/lib/autocomplete/completions.test.js"
   },
   "dependencies": {
     "@codemirror/autocomplete": "^6.18.0",
