Add 3-tier extensibility system and favicon
- Add registry.ts for global helper/library registration
- Add transformer.ts factory for configured instances
- Update index.ts with new exports and evaluate options
- Add extensibility.test.ts with comprehensive tests
- Add subpath exports for ./registry and ./transformer
- Copy favicon files from json-data-mapper
- Configure favicon in Astro docs

Extensibility API:
- registerFunction/registerLibrary for global registration
- createTransformer() for instance-level configuration
- Per-evaluation helpers via evaluate() options
- Priority: per-eval > instance > global > built-in

--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -30,6 +30,14 @@
     "./lexer": {
       "types": "./dist/lexer.d.ts",
       "import": "./dist/lexer.js"
+    },
+    "./registry": {
+      "types": "./dist/registry.d.ts",
+      "import": "./dist/registry.js"
+    },
+    "./transformer": {
+      "types": "./dist/transformer.d.ts",
+      "import": "./dist/transformer.js"
     }
   },
   "files": [
