--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -20,6 +20,7 @@
     "@tailwindcss/vite": "^4.1.18",
     "astro": "^5.0.0",
     "codemirror": "^6.0.1",
+    "idb": "^8.0.3",
     "prettier": "^3.8.1",
     "sharp": "^0.33.0",
     "svelte": "^5.49.1",
