--- a/packages/playground/package.json
+++ b/packages/playground/package.json
@@ -9,14 +9,15 @@
     "test": "node src/lib/autocomplete/completions.test.js"
   },
   "dependencies": {
+    "@ahsankhanamu/json-transformer": "*",
     "@codemirror/autocomplete": "^6.18.0",
     "@codemirror/lang-javascript": "^6.2.2",
     "@codemirror/lang-json": "^6.0.1",
     "@codemirror/state": "^6.5.0",
     "@codemirror/view": "^6.35.0",
-    "@ahsankhanamu/json-transformer": "*",
     "@sveltejs/kit": "^2.0.0",
     "codemirror": "^6.0.1",
+    "idb": "^8.0.3",
     "prettier": "^3.8.1",
     "svelte": "^5.0.0"
   },
